docs/css/style.css
* {
    box-sizing: border-box;
    
  }
  

  @keyframes LogoAnim {
    0% {
      transform: scale(1);
    }
  
    50% {
      transform: scale(1.1);
    }
  
    100% {
      transform: scale(1);
    }
  }

    .header-social{
      padding-top:3px;
      margin-left: 1em;
    }
  .header-social p{
    display:inline;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color:#fcbe0e;
    font-size:22px;
    margin-left: 50px;
    position: relative;
    bottom:4px;
  }

  .header-social a img{
    max-width:1.7em;
    display: inline;
    margin-right: 0.2em;
  }
  .image-title, #logo{
    display:inline-block; 
    width: 10em;
  }
  #logo:hover{
    animation: LogoAnim 1s ease 0s 1 normal forwards;
  }
  .nav-title{
    display:none;
  }

  .header{
    background-color: #262626;
    height:2.1rem;
  }

  .divider{
    display:inline-block;
    height:50px;
    width:2px;
    background-color: rgb(56, 56, 56);
    opacity: 0.5;
    position:relative;
    top:18px;
    margin-left: 25px;
  }
  .hours{
    color:#454545;
    display:inline-block;
    font-size: 17px;
    font-family:Arial, Helvetica, sans-serif;
    font-weight:550;
    line-height: 1px;
    position:relative;
    top:15px;
    margin-left: 15px;;
}
  
  body {
    margin: 0px;
    font-family: 'segoe ui';
    overflow-x:hidden;
    background-color: #eeeeee;
  }
  
  .nav {
    height: 65px;
    width: 100%;
    background-color: #ffffff;
    position: relative;
    box-shadow: 1px 1px 10px 1px #888888;
  }
  
  .nav > .nav-header{
    display: inline;
  }
  
  .nav > .nav-header > .image-title{
    display: inline-block;
    font-size: 22px;
    color: #fff;
    padding: 10px 10px 10px 10px;
  }
  
  .nav > .nav-btn {
    display: none;
  }
  
  .nav > .nav-links{
    display:inline-table;
    float: unset;
    font-size: 18px;
    padding-left: 10%;
    position:relative;
    bottom:29px;
  }
  
  .nav > .nav-links > a {
    display: inline-block;
    padding: 13px 10px 13px 10px;
    text-decoration: none!important;
    font-size: 17px;
    font-family:Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    font-weight:550;
    color:#454545;
    position:relative;
    margin-left: 1.7rem;
    
  }

  .all-checks{
    display: inline-flex;
    width:100%;
    align-items: center;
  justify-content: center;
  }



  .checkmark{
    margin-left:28%;
    width:40%;
    margin-top: 10%;
  }

  .nav-links a:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #fcbe0e;
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
  }

  .nav-links a:hover:after {
    transform: scaleX(1);
    transform-origin: bottom left;
  }
  
  
  #phone-slide{
    display:none;
  }
  #pc-slide{
    display:block;
  }
  
  .nav > #nav-check {
    display: none;
  }


/* Slideshow Style Tags */

@keyframes Slides {
	0% {
		opacity: 0;
		transform: translateX(250px);
	}

	100% {
		opacity: 1;
		transform: translateX(0);
	}
}

.slideshow-images, .slideshow-images-phone{
    width: auto;
    max-width: 100%; 
    display: block; 
    height: auto; 
    animation: Slides 1s ease 0s 1 normal forwards;
    overflow-x: hidden;
}
.slideshow{
  overflow-x: hidden;
}


  @media (max-width: 1500px){
    .nav > .nav-links{
        padding-left: 2%;
      }
  }

  @media (max-width: 1350px){
    .hours, .divider{
        display:none;
    }
    #phone-number{
      display: none;
    }
  }

  @media (min-width:1010px) {
    #phone-slide{
      display:none;
    }
    #pc-slide{
      display:block;
    }
    .nav{
        height: 80px;
    }
    .image-title, #logo{
        display:inline-block; 
        width: 13em;
        margin-left:1em;
      }
      .header-social{
        margin-left:4em
      }
  }
  @media (max-width:1010px) {

    #phone-slide{
      display:block;
      width: 150%;
      max-width: 150%;
      overflow-x:inherit;
    }
    #pc-slide{
      display:none;
    }



    .header-social p{
      margin-left: 20px;
    }

    .header{
        display:block;
    }
    .image-title, #logo{
        display: inline-block;
    }
    .nav-title{
        display:none;
      }
    .nav > .nav-btn {
      display: inline-block;
      position: absolute;
      right: 0px;
      top: 0px;
    }
    .nav > .nav-btn > label {
      display: inline-block;
      width: 50px;
      height: 50px;
      position: relative;
      top:8px;
      padding: 13px;
      
    }
    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
      background-color: rgba(0, 0, 0, 0.3);
      
    }
    .nav > .nav-btn > label > span {
      display: block;
      width: 25px;
      height: 10px;
      border-top: 2px solid #272727;
    }
    .nav > .nav-links {
      position: absolute;
      display: block;
      width: 100%;
      background-color: #2e2e2e;
      height: 0px;
      transition: all 0.3s ease-in;
      overflow-y: hidden;
      top: 65px;
      z-index: 5;
      
    }
    .nav > .nav-links a{
      display: block;
      width: 100%;
      text-transform:capitalize;
      font-weight: 550;
      color: #efefef;
      font-size:1.1rem;
      margin-left: 1rem;
    }
    .nav > #nav-check:not(:checked) ~ .nav-links {
      height: 0px;
    }
    .nav > #nav-check:checked ~ .nav-links {
      height: calc(100vh - 50px);
      overflow-y: auto;
    }
    
    .nav > .nav-links a:hover { 
        background-color: rgba(204, 204, 204, 0.3);
    }

    .nav-links a:hover:after {
        transform: scaleX(0);
      }
      
    .nav{
        box-shadow: 5px 2px 10px 2px #888888;

    }
  }

